# eagle_server

./: CMakeLists.txt  CMakeLists.txt.example  LogicServerStart.sh  LogicServerStop.sh  LoginServerStart.sh  LoginServerStop.sh  README.md  WorldServerStart.sh  WorldServerStop.sh  log.sh.template  添加环境变量.txt
Config/: BehaviorList.xml  CentralServer.xml  GameServerParameters.xml  LoginServerConfig.xml  Scene.xml  ServerList.xml  WorldGameServerParameters.xml  ZoneConfig.xml  ZoneConfig.xml.template
Config/Behavior/: behavior_test_1.xml
Config/Data/: CoinsConfig.json  DefineConfig.json  EquipsConfig.json  InitializesConfig.json  ItemsConfig.json  JobTablesConfig.json  MapsConfig.json
Config/RunConfig/: VipChestConfig.xml
LuaScript/: ActivityInit.lua  Init.lua  PlayerInit.lua
builders/cmake/: CMakeLists.txt.example
builders/cmake/CentralServer/: CMakeLists.txt
builders/cmake/ChatServer/: CMakeLists.txt
builders/cmake/GameShared/: CMakeLists.txt
builders/cmake/GatewayServer/: CMakeLists.txt
builders/cmake/LogicDataServer/: CMakeLists.txt
builders/cmake/LogicServer/: CMakeLists.txt
builders/cmake/LoginDataServer/: CMakeLists.txt
builders/cmake/LoginServer/: CMakeLists.txt  CMakeLists.txt.bak
builders/cmake/ProxyServer/: CMakeLists.txt
builders/cmake/SceneServer/: CMakeLists.txt
builders/cmake/WFightServer/: CMakeLists.txt
builders/cmake/WGameServer/: CMakeLists.txt
builders/cmake/WMatchServer/: CMakeLists.txt
builders/cmake/base/: CMakeLists.txt
elf_server/: elf_server.sln
elf_server/CentralServer/: CentralServer.vcxproj  CentralServer.vcxproj.filters
elf_server/ChatServer/: ChatServer.vcxproj  ChatServer.vcxproj.filters
elf_server/GameShared/: GameShared.vcxproj  GameShared.vcxproj.filters
elf_server/GatewayServer/: GatewayServer.vcxproj  GatewayServer.vcxproj.filters
elf_server/LogicDataServer/: LogicDataServer.vcxproj  LogicDataServer.vcxproj.filters
elf_server/LogicServer/: LogicServer.vcxproj  LogicServer.vcxproj.filters
elf_server/LoginDataServer/: LoginDataServer.vcxproj  LoginDataServer.vcxproj.filters
elf_server/LoginServer/: LoginServer.vcxproj  LoginServer.vcxproj.filters
elf_server/ProxyServer/: ProxyServer.vcxproj  ProxyServer.vcxproj.filters
elf_server/ShareLib/: ShareLib.vcxproj  ShareLib.vcxproj.filters
elf_server/WGameServer/: WGameServer.vcxproj  WGameServer.vcxproj.filters
elf_server/WGateServer/: WGateServer.vcxproj  WGateServer.vcxproj.filters
elf_server/WMatchServer/: WMatchServer.vcxproj  WMatchServer.vcxproj.filters
elf_server/base/: ReadMe.txt  base.vcxproj  base.vcxproj.filters
share_tuning/design/: AnimConfig.xls  BPConfig.xls  BuffConfig.xls  CommonDropConfig.xls  DungeonConfig.xls  GameServerParameters.xml  GuideConfig.xls  ItemConfig.xls  LandmassConfig.xls  MapConfig.xls  MonsterConfig.xls  MonsterGroupConfig.xls  QuestConfig.xls  RoleConfig.xls  SceneConfig.xls  SkillConfig.xls  UIBPConfig.xls  WorldFightServerParameters.xml  design.xls
share_tuning/doc/: clientMsg.xls  struct.xls
sql/: ai.sql  datasql.py.template  init.sql.template  install_guild_friend.sql  install_log.sql  install_logic.sql  install_login.sql  install_package_code.sh  package_code  robot.sql  test.sql  test_guild.sql  test_mail.sql  test_mail1.sql
src/CentralServer/: CentralServer.cpp  CentralServer.h  CentralService.cpp  CentralService.h  CentralTask.cpp  CentralTask.h  CentralTaskManager.cpp  CentralTaskManager.h  Defs.cpp  Defs.h
src/ChatServer/: ChatClientTask.cpp  ChatClientTask.h  ChatClientTaskManager.cpp  ChatClientTaskManager.h  ChatManager.cpp  ChatManager.h  ChatServer.cpp  ChatServer.h  ChatServerTask.cpp  ChatServerTask.h  ChatServerTaskManager.cpp  ChatServerTaskManager.h  ChatService.cpp  ChatService.h  Defs.h
src/Common/: Command.h  CommonType.h  EagleError.h  InnerCommand.h  LogicDataCommand.h  LogicGateCommand.h  LogicLoginCommand.h  LoginServerCommand.h  PTCommand.h  PlayerDataInfo.h  PlayerInfo.h  ServerCommand.h  WorldCommand.h
src/GameShared/: AIBehaviac.cpp  AIBehaviac.h  AIBehaviacAction.cpp  AIBehaviacAction.h  AIBehaviacCondition.cpp  AIBehaviacCondition.h  AIBehavior.inl  Buff.cpp  Buff.h  Character.cpp  Character.h  CommonChange.cpp  CommonChange.h  CommonDrop.cpp  CommonDrop.h  Counter.cpp  Counter.h  ECS.h  ECS_AIBehaviac.cpp  ECS_AIBehaviac.h  ECS_Bag.cpp  ECS_Bag.h  ECS_Component.cpp  ECS_Component.h  ECS_Counter.cpp  ECS_Counter.h  ECS_Entity.cpp  ECS_Entity.h  ECS_FightInfo.cpp  ECS_FightInfo.h  ECS_Mail.cpp  ECS_Mail.h  ECS_System.cpp  ECS_System.h  Effect.cpp  Effect.h  EffectObject.cpp  EffectObject.h  GameBaseTask.cpp  GameBaseTask.h  (+30 more)
src/GatewayServer/: Defs.h  GatewayConnectClient.cpp  GatewayConnectClient.h  GatewayPlayer.cpp  GatewayPlayer.h  GatewayServer.cpp  GatewayServer.h  GatewayService.cpp  GatewayService.h  GatewayTask.cpp  GatewayTask.h  GatewayTaskManager.cpp  GatewayTaskManager.h  GatewayUdpServer.cpp  GatewayUdpServer.h  GatewayWSTask.cpp  GatewayWSTask.h  GatewayWSTaskManager.cpp  GatewayWSTaskManager.h  PlayerManager.cpp  PlayerManager.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
src/LogicDataServer/: DataDBConnection.h  Defs.h  DelayDBConnection.h  DelaySaveCmdQueue.cpp  DelaySaveCmdQueue.h  DelayTimeTick.cpp  DelayTimeTick.h  LogDBConnection.h  LogTimeTick.cpp  LogTimeTick.h  LogicDBConnectClient.cpp  LogicDBConnectClient.h  LogicDataLogTask.cpp  LogicDataLogTask.h  LogicDataLogTaskManager.cpp  LogicDataLogTaskManager.h  LogicDataPlayer.cpp  LogicDataPlayer.h  LogicDataServer.cpp  LogicDataServer.h  LogicDataService.cpp  LogicDataService.h  LogicDataTask.cpp  LogicDataTask.h  LogicDataTaskManager.cpp  LogicDataTaskManager.h  PlayerInfoManager.cpp  SqlData.h  SysLogInfo.cpp  SysLogInfo.h
src/LogicServer/: DBConnectClient.cpp  DBConnectClient.h  Defs.h  GM.cpp  GM.h  GameServerManager.cpp  GameServerManager.h  LogDBConnectClient.cpp  LogDBConnectClient.h  LogicAction.cpp  LogicAction.h  LogicCondition.h  (+27 more)
tools/: lib_json.lib  libcurl.lib  libuv.lib  lua.lib  mysql.docx  php.ini  tolua++.lib  tolua.txt  客户端错误信息过滤命令.txt  添加环境变量.txt
(+360 files in other folders)
