FILE(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/CentralServer/*.cpp)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src ${COMMON_PATH} ${BASE_PATH} ${SHARED_PATH} ${3PARTY_INC} ${GEN_PATH} ${GAMESHARED_PATH})

ADD_EXECUTABLE(CentralServer ${SOURCES})

TARGET_LINK_LIBRARIES(CentralServer ${PROJECT_SOURCE_DIR}/lib/libGameShared.a ${PROJECT_SOURCE_DIR}/lib/libshared.a ${PROJECT_SOURCE_DIR}/lib/libbase.a ${UV_LIB})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/)


