FILE(GLOB_RECURSE SOURCES ${GAMESHARED_PATH}/*.cpp ${GEN_PATH}/*.cpp)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${COMMON_PATH} ${BASE_PATH} ${GEN_PATH} ${3PARTY_INC} ${PROTO_IMP_PATH} ${SHARED_PATH})
IF(SOURCES)
	SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
	ADD_LIBRARY(GameShared STATIC ${SOURCES} ${PROTO_SOURCE})

	#TARGET_LINK_LIBRARIES(base $(UV_LIB})
ENDIF(SOURCES)

#INSTALL(FILES ${HEADERS} DESTINATION Common)
