FILE(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/GatewayServer/*.cpp)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src ${COMMON_PATH} ${BASE_PATH} ${GEN_PATH} ${3PARTY_INC} ${SHARED_PATH} ${GAMESHARED_PATH} ${PROTO_IMP_PATH} )

ADD_EXECUTABLE(GatewayServer ${SOURCES} ${PROTO_SOURCE})

TARGET_LINK_LIBRARIES(GatewayServer ${PROJECT_SOURCE_DIR}/lib/libGameShared.a ${PROJECT_SOURCE_DIR}/lib/libshared.a ${PROJECT_SOURCE_DIR}/lib/libbase.a ${UV_LIB} ${CURL_LIB} ${PROTOBUF_LIB} ${JSON_LIB})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/)


