FILE(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/LogicDataServer/*.cpp)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src ${COMMON_PATH} ${BASE_PATH} ${3PARTY_INC} ${SHARED_PATH})

ADD_EXECUTABLE(LogicDataServer ${SOURCES})

TARGET_LINK_LIBRARIES(LogicDataServer ${PROJECT_SOURCE_DIR}/lib/libshared.a ${PROJECT_SOURCE_DIR}/lib/libbase.a ${UV_LIB} ${MYSQL_LIB} ${MYSQLPP_LIB} ${JSON_LIB})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/)
