FILE(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/LoginServer/*.cpp)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src ${COMMON_PATH} ${BASE_PATH} ${GEN_PATH} ${3PARTY_INC} ${PROTO_IMP_PATH} ${SHARED_PATH} ${GAMESHARED_PATH})

ADD_EXECUTABLE(LoginServer ${SOURCES})

TARGET_LINK_LIBRARIES(LoginServer ${PROJECT_SOURCE_DIR}/lib/libGameShared.a ${PROJECT_SOURCE_DIR}/lib/libshared.a ${PROJECT_SOURCE_DIR}/lib/libbase.a ${UV_LIB} ${PROTOBUF_LIB} ${JSON_LIB})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/)

