FILE(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/WGameServer/*.cpp)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src ${COMMON_PATH} ${BASE_PATH} ${3PARTY_INC} ${PROTO_IMP_PATH} ${SHARED_PATH} ${GEN_PATH} ${GAMESHARED_PATH})

ADD_EXECUTABLE(WGameServer ${SOURCES})

TARGET_LINK_LIBRARIES(WGameServer ${PROJECT_SOURCE_DIR}/lib/libGameShared.a  ${PROTOBUF_LIB} ${PROJECT_SOURCE_DIR}/lib/libshared.a ${PROJECT_SOURCE_DIR}/lib/libbase.a  ${JSON_LIB} ${UV_LIB})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/)


