FILE(GLOB_RECURSE SOURCES ${BASE_PATH}/*.cpp)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${BASE_PATH} ${3PARTY_INC})
IF(SOURCES)
	SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
	ADD_LIBRARY(base STATIC ${SOURCES})

	#TARGET_LINK_LIBRARIES(base $(UV_LIB})
ENDIF(SOURCES)

#INSTALL(FILES ${HEADERS} DESTINATION Common)
